# ai-telegram-bot-starter

./: .env.local  .gitignore  README.md  pyproject.toml
dependencies/: docker-compose.yaml
src/: main.py
src/ai_bot/: agent.py  langgraph_bot.py  langgraph_bot_service.py
src/ai_bot/user/: user_service.py
src/api/: telegram.py
src/api/model/: user.py
src/configuration/: app_lifespan.py
src/configuration/postgres/: postgres_config.py
src/configuration/redis/: redis_config.py  redis_service.py
src/configuration/telegram/: bot.py  telegram_config.py
